Fix the z-index of the sidebar
The z-index of the sidebar is too low so the text pass on top of
the sidebar when scrolling verticaly. Fix this by setting the z-index
to 1029.

--- a/css/page.css
+++ b/css/page.css
@@ -41,6 +41,7 @@ a.anchor {
 
 #sidebar {
 	position: fixed;
+	z-index: 1028;
 	width: 350px;
 	top: 50px;
 	bottom: 0;
